Full copy of scene causes failed assertion '(id_iter->tag & LIB_TAG_NEW) == 0' #91240

Closed
opened 2021-09-07 15:29:14 +02:00 by Sybren A. Stüvel · 4 comments

Blender Version
Broken: master, a3ca973dec
Worked: unknown, only occurs with a debug build and I didn't test on older releases

Short description of error
Duplicating a scene containing an animated object causes its Action datablock to fail BLI_assert((id_iter->tag & LIB_TAG_NEW) == 0); in BKE_scene_duplicate()

Exact steps for others to reproduce the error

  • Start Blender with the default scene
  • Key the location of the default cube
  • Go to Scene (top right corner), copy, Full Copy
  • See Blender crash (assuming built with WITH_ASSERT_ABORT=ON)

This is only slightly blocking for #91046 ("Create pose asset" button hangs blender); I can reproduce that particular issue with a minimal file that works around the problem described here. For a final test that the original problem has indeed been solved this should be fixed, though.

Stack trace:
P2370: (An Untitled Masterwork)

libc.so.6!__GI_raise(int sig) (/build/glibc-eX1tMB/glibc-2.31/sysdeps/unix/sysv/linux/raise.c:50)
libc.so.6!__GI_abort() (/build/glibc-eX1tMB/glibc-2.31/stdlib/abort.c:79)
_BLI_assert_abort() (/home/sybren/workspace/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61)
BKE_scene_duplicate(Main * bmain, Scene * sce, eSceneCopyMethod type) (/home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/scene.c:1836)
ED_scene_add(Main * bmain, bContext * C, wmWindow * win, eSceneCopyMethod method) (/home/sybren/workspace/blender-git/blender/source/blender/editors/scene/scene_edit.c:70)
scene_new_exec(bContext * C, wmOperator * op) (/home/sybren/workspace/blender-git/blender/source/blender/editors/scene/scene_edit.c:202)
WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1076)
WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1096)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1351)
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1558)
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1606)
ui_apply_but_funcs_after(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/editors/interface/interface_handlers.c:1024)
ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/sybren/workspace/blender-git/blender/source/blender/editors/interface/interface_handlers.c:11429)
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:694)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2843)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2958)
wm_event_do_handlers(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3378)
WM_main(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm.c:648)
main(int argc, const char ** argv) (/home/sybren/workspace/blender-git/blender/source/creator/creator.c:558)
**Blender Version** Broken: master, a3ca973dec Worked: unknown, only occurs with a debug build and I didn't test on older releases **Short description of error** Duplicating a scene containing an animated object causes its Action datablock to fail `BLI_assert((id_iter->tag & LIB_TAG_NEW) == 0);` in `BKE_scene_duplicate()` **Exact steps for others to reproduce the error** - Start Blender with the default scene - Key the location of the default cube - Go to Scene (top right corner), copy, Full Copy - See Blender crash (assuming built with `WITH_ASSERT_ABORT=ON`) This is only slightly blocking for #91046 ("Create pose asset" button hangs blender); I can reproduce that particular issue with a minimal file that works around the problem described here. For a final test that the original problem has indeed been solved this should be fixed, though. Stack trace: [P2370: (An Untitled Masterwork)](https://archive.blender.org/developer/P2370.txt) ``` libc.so.6!__GI_raise(int sig) (/build/glibc-eX1tMB/glibc-2.31/sysdeps/unix/sysv/linux/raise.c:50) libc.so.6!__GI_abort() (/build/glibc-eX1tMB/glibc-2.31/stdlib/abort.c:79) _BLI_assert_abort() (/home/sybren/workspace/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:61) BKE_scene_duplicate(Main * bmain, Scene * sce, eSceneCopyMethod type) (/home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/scene.c:1836) ED_scene_add(Main * bmain, bContext * C, wmWindow * win, eSceneCopyMethod method) (/home/sybren/workspace/blender-git/blender/source/blender/editors/scene/scene_edit.c:70) scene_new_exec(bContext * C, wmOperator * op) (/home/sybren/workspace/blender-git/blender/source/blender/editors/scene/scene_edit.c:202) WM_menu_invoke_ex(bContext * C, wmOperator * op, int opcontext) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1076) WM_menu_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1096) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1351) wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1558) WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1606) ui_apply_but_funcs_after(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/editors/interface/interface_handlers.c:1024) ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/sybren/workspace/blender-git/blender/source/blender/editors/interface/interface_handlers.c:11429) wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:694) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2843) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2958) wm_event_do_handlers(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3378) WM_main(bContext * C) (/home/sybren/workspace/blender-git/blender/source/blender/windowmanager/intern/wm.c:648) main(int argc, const char ** argv) (/home/sybren/workspace/blender-git/blender/source/creator/creator.c:558) ```
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1a1c546124

This issue was referenced by 1a1c54612472fd28e4c23b695aa73bd7f81ffeaf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-09-24 15:31:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91240
No description provided.