Fix T91240: Object duplication was duplicating its action twice.

Weird that this was not reported before, this was creating a lot of
extra actions everytime...